vms/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dr-vm-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
